# iar_projet_for_for_test

./: CMakeLists.txt  main.c  main.cpp  main.h  test.dep  test.ewd  test.ewp  test.ewt  test_main.cpp
Debug/: .ninja_deps  .ninja_log
Debug/BrowseInfo/: .ninja_log  build.ninja  main.pbi  main.pbi.dep  main.xcl  test.pbd  test.pbd.browse  test.pbw  test_main.pbi  test_main.pbi.dep  test_main.xcl
Debug/Exe/: test.out  test.sim
Debug/List/: test.map
settings/: test.Debug.cspy.bat  test.Debug.cspy.ps1  test.Debug.general.xcl  test.dbgdt  test.dnx  test.wsdt
